infrastructure/ai/rmbg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rmbg-ingress
  namespace: kube-ray
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: rmbg.ray.apoorva64.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rmbg-service-head-svc
                port:
                  number: 8000
  tls:
    - hosts:
        - rmbg.ray.apoorva64.com
      secretName: rmbg-ray-apoorva64-com-tls
